--- a/MedRecords/MedRecords/App.config
+++ b/MedRecords/MedRecords/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="MedRecords.My.MySettings.connectString" connectionString="Data Source=SG-01-DEV-02\SQLSERVER;Initial Catalog=MedicalRecords;Persist Security Info=True;Integrated Security=true;" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
