--- a/MedRecords/MedRecords/MedRecords.vbproj
+++ b/MedRecords/MedRecords/MedRecords.vbproj
@@ -92,7 +92,6 @@
     <Compile Include="DataAccess\TestComplementDB.vb" />
     <Compile Include="DataAccess\VisitDB.vb" />
     <Compile Include="Entities\Allergy.vb" />
-    <Compile Include="Entities\Appointment.vb" />
     <Compile Include="Entities\Appoitmets.vb" />
     <Compile Include="Entities\Contraceptive.vb" />
     <Compile Include="Entities\FamilyHist.vb" />
@@ -128,6 +127,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Screens\Frm_Appoitment.Designer.vb">
+      <DependentUpon>Frm_Appoitment.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Frm_Appoitment.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Screens\Frm_Main.Designer.vb">
       <DependentUpon>Frm_Main.vb</DependentUpon>
@@ -212,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\Frm_Appoitment.resx">
+      <DependentUpon>Frm_Appoitment.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_Main.resx">
       <DependentUpon>Frm_Main.vb</DependentUpon>
