--- a/MedRecords/MedRecords/MedRecords.vbproj
+++ b/MedRecords/MedRecords/MedRecords.vbproj
@@ -158,6 +158,12 @@
     <Compile Include="Screens\Frm_Services.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Screens\Frm_Users.Designer.vb">
+      <DependentUpon>Frm_Users.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Frm_Users.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Screens\Frm_Visit.Designer.vb">
       <DependentUpon>Frm_Visit.vb</DependentUpon>
     </Compile>
@@ -232,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_Services.resx">
       <DependentUpon>Frm_Services.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\Frm_Users.resx">
+      <DependentUpon>Frm_Users.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_Visit.resx">
       <DependentUpon>Frm_Visit.vb</DependentUpon>
