--- a/MedRecords/MedRecords/MedRecords.vbproj
+++ b/MedRecords/MedRecords/MedRecords.vbproj
@@ -54,6 +54,9 @@
     <Reference Include="Microsoft.VisualBasic.PowerPacks">
       <HintPath>..\..\..\..\..\..\..\Projects\Clinic\CapaPresentacion\bin\Debug\Microsoft.VisualBasic.PowerPacks.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs">
+      <HintPath>..\..\..\..\..\Desktop\Proyectos\proyecto con todos los cambios\customerserviceapplication\packages\VisualBasic.PowerPacks.Vs.1.0.0\lib\Microsoft.VisualBasic.PowerPacks.Vs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -205,6 +208,12 @@
     <Compile Include="Screens\MedicalHistory\Frm_FileViewer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Screens\MedicalHistory\Frm_Habits.Designer.vb">
+      <DependentUpon>Frm_Habits.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\MedicalHistory\Frm_Habits.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Screens\MedicalHistory\Frm_MedicalProblems.Designer.vb">
       <DependentUpon>Frm_MedicalProblems.vb</DependentUpon>
     </Compile>
@@ -276,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\MedicalHistory\Frm_FileViewer.resx">
       <DependentUpon>Frm_FileViewer.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\MedicalHistory\Frm_Habits.resx">
+      <DependentUpon>Frm_Habits.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\MedicalHistory\Frm_MedicalProblems.resx">
       <DependentUpon>Frm_MedicalProblems.vb</DependentUpon>
