--- a/MedRecords/MedRecords/MedRecords.vbproj
+++ b/MedRecords/MedRecords/MedRecords.vbproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -142,6 +143,12 @@
     <Compile Include="Screens\Frm_Appoitment.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Screens\Frm_InvoicesReport.designer.vb">
+      <DependentUpon>Frm_InvoicesReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Frm_InvoicesReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Screens\Frm_Main.Designer.vb">
       <DependentUpon>Frm_Main.vb</DependentUpon>
     </Compile>
@@ -176,6 +183,12 @@
       <DependentUpon>Frm_Visit.vb</DependentUpon>
     </Compile>
     <Compile Include="Screens\Frm_Visit.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\Frm_VisitHistory.Designer.vb">
+      <DependentUpon>Frm_VisitHistory.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Frm_VisitHistory.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Screens\MedicalHistory\FrmSurgery.Designer.vb">
@@ -253,6 +266,9 @@
     <EmbeddedResource Include="Screens\Frm_Appoitment.resx">
       <DependentUpon>Frm_Appoitment.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Screens\Frm_InvoicesReport.resx">
+      <DependentUpon>Frm_InvoicesReport.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_Main.resx">
       <DependentUpon>Frm_Main.vb</DependentUpon>
     </EmbeddedResource>
@@ -270,6 +286,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_Visit.resx">
       <DependentUpon>Frm_Visit.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\Frm_VisitHistory.resx">
+      <DependentUpon>Frm_VisitHistory.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\MedicalHistory\FrmSurgery.resx">
       <DependentUpon>FrmSurgery.vb</DependentUpon>
