--- a/MedRecords/MedRecords/MedRecords.vbproj
+++ b/MedRecords/MedRecords/MedRecords.vbproj
@@ -51,6 +51,9 @@
     <Reference Include="FontAwesome.Sharp, Version=5.15.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.5.15.3\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks">
       <HintPath>..\..\..\..\..\..\..\Projects\Clinic\CapaPresentacion\bin\Debug\Microsoft.VisualBasic.PowerPacks.dll</HintPath>
     </Reference>
@@ -142,6 +145,12 @@
       <DependentUpon>Frm_Appoitment.vb</DependentUpon>
     </Compile>
     <Compile Include="Screens\Frm_Appoitment.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\Frm_Expenses.Designer.vb">
+      <DependentUpon>Frm_Expenses.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\Frm_Expenses.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Screens\Frm_InvoicesReport.designer.vb">
@@ -278,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_Appoitment.resx">
       <DependentUpon>Frm_Appoitment.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\Frm_Expenses.resx">
+      <DependentUpon>Frm_Expenses.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Frm_InvoicesReport.resx">
       <DependentUpon>Frm_InvoicesReport.vb</DependentUpon>
