--- a/MedRecords/MedRecords/App.config
+++ b/MedRecords/MedRecords/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MedRecords.My.MySettings.connectString" connectionString="Data Source=SG-01-DEV-02\SQLSERVER;Initial Catalog=MedicalRecords;Persist Security Info=True;User ID=App;Password=123" />
+        <add name="MedRecords.My.MySettings.connectString" connectionString="Data Source=192.168.210.91;Initial Catalog=MedicalRecords;Persist Security Info=True;User ID=App;Password=123" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
