--- a/MedRecords/MedRecords/My Project/Settings.settings
+++ b/MedRecords/MedRecords/My Project/Settings.settings
@@ -5,9 +5,9 @@
     <Setting Name="connectString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=SG-01-DEV-02\SQLSERVER;Initial Catalog=MedicalRecords;Persist Security Info=True;User ID=App;Password=123&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=192.168.210.91;Initial Catalog=MedicalRecords;Persist Security Info=True;User ID=App;Password=123&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=SG-01-DEV-02\SQLSERVER;Initial Catalog=MedicalRecords;Persist Security Info=True;User ID=App;Password=123</Value>
+      <Value Profile="(Default)">Data Source=192.168.210.91;Initial Catalog=MedicalRecords;Persist Security Info=True;User ID=App;Password=123</Value>
     </Setting>
   </Settings>
 </SettingsFile>
